# undergraduate-research

./: README.md  electric,_hub_-_spike_prime.stl  electric,_motor_small_angular_-_spike_prime.stl  robot.urdf
ROS2_Setup/: README.md
Spike_ROS2/: README.md
Spike_ROS2/ROS2/: README.md
Spike_ROS2/ROS2/bbot/: package.xml  setup.cfg  setup.py
Spike_ROS2/ROS2/bbot/bbot/: balance.py
Spike_ROS2/ROS2/bbot/launch/: start.launch.py
Spike_ROS2/ROS2/bbot/meshes/: azure_liftarm.stl  black_peg.stl  grey_connector.stl  motor.stl  square_liftarm.stl  yellow_liftarm.stl
Spike_ROS2/ROS2/bbot/sdf/: robot.xacro.sdf
Spike_ROS2/ROS2/py_gz/: package.xml  setup.cfg  setup.py
Spike_ROS2/ROS2/py_gz/config/: motor_controller.yaml
Spike_ROS2/ROS2/py_gz/launch/: start.launch.py
Spike_ROS2/ROS2/py_gz/meshes/: axle.stl  wheel.stl
Spike_ROS2/ROS2/py_gz/urdf/: robot.xacro.urdf
Spike_ROS2/ROS2/spike_gyro/: package.xml  setup.cfg  setup.py
Spike_ROS2/ROS2/spike_gyro/spike_gyro/: gyro_publisher.py
Spike_ROS2/ROS2/spike_imu/: package.xml  setup.cfg  setup.py
Spike_ROS2/ROS2/spike_imu/spike_imu/: imu_publisher.py  imu_publisher.py.save
Spike_ROS2/ROS2/spike_interfaces/: CMakeLists.txt  package.xml
Spike_ROS2/ROS2/spike_interfaces/msg/: Gyro.msg
Spike_ROS2/ROS2/spike_motors/: package.xml  setup.cfg  setup.py
Spike_ROS2/ROS2/spike_motors/spike_motors/: motor_client.py  motor_service.py
Spike_ROS2/Spike/: gyro_publisher.py  main.py  orientation_publisher.py  pid.py  rpy_publisher.py
UbuntuServer/: README.md
Ubuntu_Server/: README.md
